Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDVB.BAS

Public Declare Sub BTICard_RAMWrL Lib "BTICARD.DLL" Alias "_BTICard_RAMWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMWrmL Lib "BTICARD.DLL" Alias "_BTICard_RAMWrmL@16" (ByRef valueptr As Long, ByRef addrptr As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMWrmW Lib "BTICARD.DLL" Alias "_BTICard_RAMWrmW@16" (ByRef valueptr As Integer, ByRef addrptr As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMWrsL Lib "BTICARD.DLL" Alias "_BTICard_RAMWrsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMWrsW Lib "BTICARD.DLL" Alias "_BTICard_RAMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_RAMWrW Lib "BTICARD.DLL" Alias "_BTICard_RAMWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function BTICard_ReverseLong Lib "BTICARD.DLL" Alias "_BTICard_ReverseLong@4" (ByVal value As Long) As Long
Public Declare Function BTICard_ReverseWord Lib "BTICARD.DLL" Alias "_BTICard_ReverseWord@4" (ByVal value As Integer) As Integer
Public Declare Function BTICard_SeqBlkRd Lib "BTICARD.DLL" Alias "_BTICard_SeqBlkRd@16" (ByRef buf As Integer, ByVal bufcount As Long, ByRef blkcnt As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqBlkRdEx Lib "BTICARD.DLL" Alias "_BTICard_SeqBlkRdEx@20" (ByRef buf As Integer, ByVal bufcount As Long, ByVal maxblkcnt As Long, ByRef blkcnt As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqClear Lib "BTICARD.DLL" Alias "_BTICard_SeqClear@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqCommRd Lib "BTICARD.DLL" Alias "_BTICard_SeqCommRd@12" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function BTICard_SeqConfig Lib "BTICARD.DLL" Alias "_BTICard_SeqConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqConfigEx Lib "BTICARD.DLL" Alias "_BTICard_SeqConfigEx@16" (ByVal configval As Long, ByVal seqcount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqConfigExx Lib "BTICARD.DLL" Alias "_BTICard_SeqConfigExx@20" (ByVal configval As Long, ByVal seqaddr As Long, ByVal seqcount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqDMARd Lib "BTICARD.DLL" Alias "_BTICard_SeqDMARd@12" (ByRef buf As Integer, ByVal bufcount As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqFindCheckVersion Lib "BTICARD.DLL" Alias "_BTICard_SeqFindCheckVersion@8" (ByRef precord As Integer, ByVal version As Integer) As Long
Public Declare Function BTICard_SeqFindInit Lib "BTICARD.DLL" Alias "_BTICard_SeqFindInit@12" (ByRef seqbuf As Integer, ByVal seqbufsize As Long, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindMore1553Ex Lib "BTICARD.DLL" Alias "_BTICard_SeqFindMore1553Ex@12" (ByRef precmore As SEQRECORDMORE1553, ByVal recordsize As Integer, ByRef precbase As SEQRECORD1553) As Long
Public Declare Function BTICard_SeqFindNext1553Ex Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNext1553Ex@12" (ByRef precord As SEQRECORD1553, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNext429Ex Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNext429Ex@12" (ByRef precord As SEQRECORD429, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNext708Ex Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNext708Ex@12" (ByRef precord As SEQRECORD708, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNext717Ex Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNext717Ex@12" (ByRef precord As SEQRECORD717, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNextCSDBEx Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNextCSDBEx@12" (ByRef precord As SEQRECORDCSDB, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNextDIOEx Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNextDIOEx@12" (ByRef precord As SEQRECORDDIO, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNextEBREx Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNextEBREx@12" (ByRef precord As SEQRECORDEBR, ByVal recordsize As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqFindNextEx Lib "BTICARD.DLL" Alias "_BTICard_SeqFindNextEx@16" (ByRef precord As Integer, ByVal recordcount As Integer, ByRef seqtype As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function BTICard_SeqInterval Lib "BTICARD.DLL" Alias "_BTICard_SeqInterval@12" (ByVal interval As Long, ByVal mode As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqIntervalEx Lib "BTICARD.DLL" Alias "_BTICard_SeqIntervalEx@8" (ByVal shiftval As Integer, ByVal handleval As Long) As Integer
Public Declare Function BTICard_SeqIsRunning Lib "BTICARD.DLL" Alias "_BTICard_SeqIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqLogFrequency Lib "BTICARD.DLL" Alias "_BTICard_SeqLogFrequency@8" (ByVal logfreq As Integer, ByVal handleval As Long) As Integer
Public Declare Function BTICard_SeqRd Lib "BTICARD.DLL" Alias "_BTICard_SeqRd@8" (ByRef buf As Integer, ByVal handleval As Long) As Integer
Public Declare Function BTICard_SeqRdEx Lib "BTICARD.DLL" Alias "_BTICard_SeqRdEx@12" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function BTICard_SeqResume Lib "BTICARD.DLL" Alias "_BTICard_SeqResume@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqStart Lib "BTICARD.DLL" Alias "_BTICard_SeqStart@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqStatus Lib "BTICARD.DLL" Alias "_BTICard_SeqStatus@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SeqStop Lib "BTICARD.DLL" Alias "_BTICard_SeqStop@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_Shl Lib "BTICARD.DLL" Alias "_BTICard_Shl@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function BTICard_Shr Lib "BTICARD.DLL" Alias "_BTICard_Shr@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function BTICard_SignMant Lib "BTICARD.DLL" Alias "_BTICard_SignMant@4" (ByRef str As String) As Integer
Public Declare Sub BTICard_Sub64 Lib "BTICARD.DLL" Alias "_BTICard_Sub64@24" (ByRef resulth As Long, ByRef resultl As Long, ByVal valah As Long, ByVal valal As Long, ByVal valbh As Long, ByVal valbl As Long)
Public Declare Sub BTICard_SwapEndianL Lib "BTICARD.DLL" Alias "_BTICard_SwapEndianL@4" (ByRef value As Long)
Public Declare Sub BTICard_SwapEndianW Lib "BTICARD.DLL" Alias "_BTICard_SwapEndianW@8" (ByRef valuea As Integer, ByRef valueb As Integer)
Public Declare Sub BTICard_SwapIfBigEndianL Lib "BTICARD.DLL" Alias "_BTICard_SwapIfBigEndianL@4" (ByRef value As Long)
Public Declare Sub BTICard_SwapIfBigEndianW Lib "BTICARD.DLL" Alias "_BTICard_SwapIfBigEndianW@8" (ByRef valuea As Integer, ByRef valueb As Integer)
Public Declare Sub BTICard_SwapIfLittleEndianL Lib "BTICARD.DLL" Alias "_BTICard_SwapIfLittleEndianL@4" (ByRef value As Long)
Public Declare Sub BTICard_SwapIfLittleEndianW Lib "BTICARD.DLL" Alias "_BTICard_SwapIfLittleEndianW@8" (ByRef valuea As Integer, ByRef valueb As Integer)
Public Declare Function BTICard_SysMonClear Lib "BTICARD.DLL" Alias "_BTICard_SysMonClear@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonDACToVal Lib "BTICARD.DLL" Alias "_BTICard_SysMonDACToVal@24" (ByVal dacval As Integer, ByVal rangemin As Long, ByVal rangemax As Long, ByVal dacval_max As Integer, ByVal scalefactor As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonDescGet Lib "BTICARD.DLL" Alias "_BTICard_SysMonDescGet@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonInit Lib "BTICARD.DLL" Alias "_BTICard_SysMonInit@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonMaxRd Lib "BTICARD.DLL" Alias "_BTICard_SysMonMaxRd@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonMinRd Lib "BTICARD.DLL" Alias "_BTICard_SysMonMinRd@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonNomRd Lib "BTICARD.DLL" Alias "_BTICard_SysMonNomRd@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonThresholdSet Lib "BTICARD.DLL" Alias "_BTICard_SysMonThresholdSet@20" (ByVal enable As Long, ByVal min As Long, ByVal max As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonTypeGet Lib "BTICARD.DLL" Alias "_BTICard_SysMonTypeGet@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonUserStr Lib "BTICARD.DLL" Alias "_BTICard_SysMonUserStr@12" (ByVal value As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonValRd Lib "BTICARD.DLL" Alias "_BTICard_SysMonValRd@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonValStr Lib "BTICARD.DLL" Alias "_BTICard_SysMonValStr@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_SysMonValToDAC Lib "BTICARD.DLL" Alias "_BTICard_SysMonValToDAC@24" (ByVal val As Long, ByVal rangemin As Long, ByVal rangemax As Long, ByVal dacval_max As Integer, ByVal scalefactor As Long, ByVal handleval As Long) As Integer
Public Declare Function BTICard_TickTimerStart Lib "BTICARD.DLL" Alias "_BTICard_TickTimerStart@4" (ByVal milliseconds As Long) As Long
Public Declare Function BTICard_TickTimerValid Lib "BTICARD.DLL" Alias "_BTICard_TickTimerValid@4" (ByVal timer As Long) As Long
Public Declare Function BTICard_Timer64Rd Lib "BTICARD.DLL" Alias "_BTICard_Timer64Rd@12" (ByRef valueh As Long, ByRef valuel As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_Timer64Wr Lib "BTICARD.DLL" Alias "_BTICard_Timer64Wr@12" (ByVal valueh As Long, ByVal valuel As Long, ByVal handleval As Long)
Public Declare Sub BTICard_TimerClear Lib "BTICARD.DLL" Alias "_BTICard_TimerClear@4" (ByVal handleval As Long)
Public Declare Function BTICard_TimerRd Lib "BTICARD.DLL" Alias "_BTICard_TimerRd@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_TimerResolution Lib "BTICARD.DLL" Alias "_BTICard_TimerResolution@8" (ByVal timerresol As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TimerResolutionEx Lib "BTICARD.DLL" Alias "_BTICard_TimerResolutionEx@8" (ByVal timershift As Integer, ByVal handleval As Long) As Integer
Public Declare Function BTICard_TimerStatus Lib "BTICARD.DLL" Alias "_BTICard_TimerStatus@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_TimerWr Lib "BTICARD.DLL" Alias "_BTICard_TimerWr@8" (ByVal value As Long, ByVal handleval As Long)
Public Declare Function BTICard_TSMDriftMaxGet Lib "BTICARD.DLL" Alias "_BTICard_TSMDriftMaxGet@8" (ByRef driftptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMDriftMaxSet Lib "BTICARD.DLL" Alias "_BTICard_TSMDriftMaxSet@8" (ByVal drift As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMDriftRd Lib "BTICARD.DLL" Alias "_BTICard_TSMDriftRd@8" (ByRef driftptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMDriftRelWr Lib "BTICARD.DLL" Alias "_BTICard_TSMDriftRelWr@8" (ByVal drift As Long, ByVal handleval As Long) As Long
